Refactor Get Programme List To Avoid Issues Of N+1 Queries